2018-04-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c:
	  Fix reads from unallocated memory.
	* src/stm8/gen.c:
	  Fix bug #2743.

2018-04-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglue.c:
	  Fix read of unitialized value in initialization of zero-length bit-field.

2018-04-15 Philipp Klaus Krause <pkk AT spth.de>

	* configure,
	  configure.ac:
	  Use C11 instead of ms-extensions to get support for anonymous struct.

2018-04-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asxxsrc/asout.c (outrw): enable emit 24-bit relocation data for stm8
	* src/stm8/main.c (get_model): fixed warning

2018-04-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-2124.c,
	  support/regression/tests/bug-2373.c,
	  support/regression/tests/bug1908493.c,
	  support/regression/tests/compare.c,
	  support/regression/tests/funptrs.c,
	  support/regression/tests/gcc-torture-execute-930702-1.c,
	  support/regression/tests/gcc-torture-execute-991112-1.c,
	  support/regression/tests/z88dk.c:
	  Workaround for 24-bit symbol assembler issue.

2018-04-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20060110-2.c:
	  Disable failing test.

2018-04-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/valdiag/tests/funcdec.c,
	* support/valdiag/tests/tentdecl.c: fix bug #2735

2018-03-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Consider string literal reuse in dead code elimination, part of RFE #567.
	* src/SDCCast.c,
	  src/SDCCast.h,
	  src/SDCCopt.c:
	  Merge adjacent calls to puts(), RFE #564.
	* src/SDCCglue.c,
	  src/stm8/gen.c:
	  Enable support for 24-bit function pointers for stm8 large memory model.
	* support/valdiag/Makefile.in:
	  Omit host by default.
	* support/valdiag/tests/funcdec.c,
	  support/valdiag/tests/tentdecl.c:
	  Disable test affected by bug #2735.
	* src/stm8/main.c: